<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TamagochiAppMain">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="343dp"
        android:layout_height="376dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toTopOf="@+id/dirt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dog_start" />

    <Button
        android:id="@+id/feed"
        android:layout_width="103dp"
        android:layout_height="57dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/orange"
        android:text="@string/feed"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/dirt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/dirt"
        android:layout_width="96dp"
        android:layout_height="56dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="204dp"
        android:backgroundTint="@color/orange"
        android:text="@string/dirt"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pet"
        app:layout_constraintStart_toEndOf="@+id/feed"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/pet"
        android:layout_width="95dp"
        android:layout_height="58dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="195dp"
        android:backgroundTint="@color/orange"
        android:text="@string/emotion"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dirt"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="68dp"
        android:layout_height="32dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="9dp"
        android:text="@string/hunger"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feed" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="68dp"
        android:layout_height="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cleanliness"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="5dp"
        android:text="@string/happy"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/food"
        android:layout_width="104dp"
        android:layout_height="115dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516"
        app:srcCompat="@drawable/better_dog_food" />

    <ImageView
        android:id="@+id/hand"
        android:layout_width="238dp"
        android:layout_height="168dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@drawable/hands_2" />

    <ImageView
        android:id="@+id/soap"
        android:layout_width="156dp"
        android:layout_height="140dp"
        android:src="@drawable/clean"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404" />

    <TextView
        android:id="@+id/hungerMeter"
        android:layout_width="121dp"
        android:layout_height="38dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.689"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />

    <TextView
        android:id="@+id/dirtMeter"
        android:layout_width="119dp"
        android:layout_height="35dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.684"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.892" />

    <TextView
        android:id="@+id/happyMeter"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.68"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>